# homework

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
include/: resource.h  resource_sheet.h
src/: CMakeLists.txt  main.c  resource.c  resource_sheet.c
test/: CMakeLists.txt  create_resource_sheet_test  create_resource_test  create_resource_test3  create_resource_test4  create_resource_test5  create_resource_test6  resource.cpp  resource_sheet.cpp
